--- a/app/src/main/res/layout/fragment_story.xml
+++ b/app/src/main/res/layout/fragment_story.xml
@@ -43,10 +43,19 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="@dimen/dimens32" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="@dimen/dimens32" />
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_story"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
+        tools:listitem="@layout/item_list_story"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
@@ -86,5 +95,17 @@
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
         app:layout_constraintTop_toBottomOf="@+id/message_for_guest" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_add_story"
+        style="@style/Text.Button"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="@dimen/dimens20"
+        android:text="@string/share"
+        app:icon="@drawable/ic_pen"
+        app:cornerRadius="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
