--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.story.StoryFragment">
+    tools:context=".ui.story.StoryActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/toolbar_story_layout"
@@ -101,11 +101,10 @@
         style="@style/Text.Button"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginTop="@dimen/dimens20"
         android:text="@string/share"
         app:cornerRadius="12dp"
         app:icon="@drawable/ic_pen"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
