--- a/app/src/main/res/layout/custom_toolbar_story.xml
+++ b/app/src/main/res/layout/custom_toolbar_story.xml
@@ -20,11 +20,12 @@
         android:id="@+id/btn_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_settings"
         android:layout_marginTop="@dimen/dimens32"
         android:layout_marginEnd="@dimen/dimens16"
+        android:contentDescription="@string/image_button_setting"
+        android:minHeight="48dp"
+        android:src="@drawable/ic_settings"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/image_button_setting" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
