--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -21,33 +21,32 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ImageView
-        android:id="@+id/iv_item_image"
+        android:id="@+id/iv_preview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:background="@android:color/white"
         android:contentDescription="@string/story_image"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_launcher_background"
         app:layout_constraintDimensionRatio="H,1.5:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting_layout"
-        tools:src="@drawable/ic_launcher_background" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting_layout" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_camerax"
         style="@style/Text.Button"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginStart="@dimen/dimens20"
         android:layout_marginTop="@dimen/dimens20"
         android:layout_marginEnd="@dimen/dimens20"
         android:text="@string/camera"
         app:cornerRadius="12dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_item_image" />
+        app:layout_constraintStart_toStartOf="@+id/guideline1"
+        app:layout_constraintTop_toBottomOf="@+id/iv_preview" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_gallery"
@@ -55,14 +54,39 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="@dimen/dimens20"
-        android:layout_marginEnd="@dimen/dimens20"
         android:text="@string/gallery"
         app:cornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_camerax"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_camerax"
         app:layout_constraintTop_toTopOf="@+id/btn_camerax" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/ideal_solution_column"
+        style="@style/TextInputLayoutStyle1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimens16"
+        android:hint="@string/deskripsi"
+        app:boxCornerRadiusBottomEnd="@dimen/dimens12"
+        app:boxCornerRadiusBottomStart="@dimen/dimens12"
+        app:boxCornerRadiusTopEnd="@dimen/dimens12"
+        app:boxCornerRadiusTopStart="@dimen/dimens12"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@+id/btn_camerax">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/ideal_solution_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:lines="4"
+            android:maxLength="255"
+            android:maxLines="4"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_upload"
@@ -70,12 +94,38 @@
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="@dimen/dimens20"
-        android:layout_marginTop="@dimen/dimens8"
-        android:layout_marginEnd="@dimen/dimens20"
-        android:text="@string/gallery"
+        android:text="@string/upload"
         app:cornerRadius="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_camerax" />
+        app:layout_constraintTop_toBottomOf="@+id/ideal_solution_column" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="@dimen/dimens20" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="@dimen/dimens20" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="@dimen/dimens32" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="@dimen/dimens32" />
 </androidx.constraintlayout.widget.ConstraintLayout>
