--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="fragment_vertical_margin">16dp</dimen>
     <dimen name="dimens4">4dp</dimen>
     <dimen name="dimens8">8dp</dimen>
+    <dimen name="dimens12">12dp</dimen>
     <dimen name="dimens16">16dp</dimen>
     <dimen name="dimens20">20dp</dimen>
     <dimen name="dimens24">24dp</dimen>
