--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -28,6 +28,32 @@
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintTop_toBottomOf="@id/user_profile_image" />
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/dicoding_black"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@id/user_name" />
+
+    <TextView
+        android:id="@+id/setting_language"
+        style="@style/Text.Header4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimens32"
+        android:drawablePadding="@dimen/dimens8"
+        android:padding="@dimen/dimens16"
+        android:text="@string/language"
+        android:foreground="?attr/selectableItemBackground"
+        app:drawableStartCompat="@drawable/ic_language"
+        app:drawableTint="@color/dicoding_black"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@+id/user_name" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_logout"
         style="@style/Text.Button"
